# medscribe

./: DEPLOY.md  README.md
backend/: .env.example  .gitignore  backup_requirements.txt  pyproject.toml  requirements.txt  schema.sql  seed_demo.py
backend/app/: main.py
backend/app/routes/: ai.py  api.py  pdf.py  recording.py
backend/app/utils/: pdf_generator.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/patient/: page.tsx
frontend/src/components/global/: Header.tsx
frontend/src/components/patient_profile/: EditFormsModal.tsx  FormSelection.tsx  GeneratedFormDisplay.tsx  Patient.tsx  ViewNoteModal.tsx
frontend/src/components/recording/: Recording.tsx
