[project]
name = "bench2bedside"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "deepgram-sdk (>=3,<4.0)",
    "supabase (>=2.13.0,<3.0.0)",
    "openai (>=1.70.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
